--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visionelixir/framework",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "VisionElixir Framework",
   "author": "",
   "license": "ISC",
@@ -31,6 +31,7 @@
     "yargs-parser": "^20.2.4"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-compress": "^4.0.1",
@@ -47,6 +48,7 @@
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
