--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "@visionelixir/framework",
   "version": "0.0.1",
   "description": "VisionElixir Framework",
-  "author": "",
-  "license": "ISC",
+  "author": "Brent Honeybone",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/visionelixir/framework.git"
+  },
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --config=jest.config.json",
@@ -12,7 +16,7 @@
     "typescript:watch": "tsc --watch",
     "check": "npm run lint && tsc --noEmit",
     "build": "rm -rf dist && npm test && npm run lint && npm run typescript:build",
-    "deploy": "npm run build && npm publish"
+    "deploy": "npm run build && npm publish --access=public"
   },
   "dependencies": {
     "@google-cloud/logging": "^9.0.0",
@@ -53,5 +57,9 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/visionelixir/framework/issues"
+  },
+  "homepage": "https://github.com/visionelixir/framework#readme"
 }
