--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@google-cloud/logging": "^9.1.0",
+    "@koa/cors": "^3.1.0",
     "chalk": "^4.1.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.21",
     "@types/koa": "^2.13.1",
+    "@types/koa__cors": "^3.0.2",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-compress": "^4.0.1",
     "@types/koa-router": "^7.4.1",
